# codesearch

./: .gitignore  README.md  pyproject.toml
codesearch/: __init__.py  cli.py  embedder.py  indexer.py  searcher.py
